k8s/be-deployment-nhl_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nhl-app-be-deployment
  namespace: __NAMESPACE__
  labels:
    component: backend
    instance: app
    name: backend-nhl-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend
      instance: app
      name: backend-nhl-app
  template:
    metadata:
      labels:
        component: backend
        instance: app
        name: backend-nhl-app
    spec:
      containers:
      - name: nhl-app-be
        image: karamel32/nhl_app_be:__BUILD_VERSION__
        imagePullPolicy: Always 
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 300m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
      volumes:
      - name: flask-pvc
        persistentVolumeClaim:
          claimName: flask-pvc
