k8s/demostrate-hpa-pod.yaml
#exec pod
# $ kubectl exec -ti traffic-generator -- sh
#install wrk
# $ apk add --no-cache wrk
#gen load; -d duration -c connection open time -t treads -d -H header
# $ wrk -c 5 -t 5 -d 99999 -H "Connection: Close" http://nhl-app-fe-svc

apiVersion: v1
kind: Pod
metadata:
  name: traffic-generator
spec:
  containers:
  - name: alpine
    image: alpine
    args:
    - sleep
    - "100000000"
