k8s/fe-deployment-nhl_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nhl-app-fe-deployment
  namespace: __NAMESPACE__
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nhl-app-fe
        image: karamel32/nhl_app:__BUILD_VERSION__
        imagePullPolicy: Always 
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            cpu: 500m
            memory: 500Mi
