k8s/be-svc-nhl_app-dev.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nhl-app-be-svc
  labels:
    component: backend
    instance: app
    name: backend-nhl-app 
  namespace: dev
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    component: backend
    instance: app
    name: backend-nhl-app
  type: ClusterIP
