k8s/fe-svc-nhl_app-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: nhl-app-fe-svc
  labels:
    name: frontend-nhl-app
    instance: app
    component: frontend
  namespace: main
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
      name: frontend-nhl-app
      instance: app
      component: frontend
  type: ClusterIP
