k8s/be-ing-nhl_app-main.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nhl-app-be-ingress-main
  namespace: main
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "ekolganov1.eastus.cloudapp.azure.com"
    http:
      paths:
      - path: /main-nhl-app-be
        pathType: Prefix
        backend:
          service:
            name: nhl-app-be-svc
            port:
              number: 80
