k8s/be-ing-svc-pvc-nhl_app-dev.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nhl-app-be-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nhl-app-be-dev
        pathType: Prefix
        backend:
          service:
            name: nhl-app-be-svc
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nhl-app-be-svc
  namespace: dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
      app: backend
  type: ClusterIP
