k8s/be-ing-svc-pvc-nhl_app-main.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nhl-app-be-ingress-main
  namespace: main
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "ekolganov1.eastus.cloudapp.azure.com"
    http:
      paths:
      - path: /main-nhl-app-be
        pathType: Prefix
        backend:
          service:
            name: nhl-app-be-svc
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nhl-app-be-svc
  namespace: main
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
      app: backend
  type: ClusterIP
