k8s/fe-ing-nhl_app-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nhl-app-fe-ingress-dev
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "ekolganov1.eastus.cloudapp.azure.com"
    http:
      paths:
      - path: /dev_nhl_app
        pathType: ImplementationSpecific
        backend:
          service:
            name: nhl-app-fe-svc
            port:
              number: 80
