k8s/fe-ing-nhl_app-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nhl-app-fe-ingress-main
  namespace: main
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    release: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: "ekolganov1.eastus.cloudapp.azure.com"
    http:
      paths:
      - path: /(main_nhl_app|favicon.ico)
        pathType: Prefix
        backend:
          service:
            name: nhl-app-fe-svc
            port:
              number: 80
