k8s/fe-ing-svc-nhl_app-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nhl-app-fe-ingress-dev
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "ekolganov1.eastus.cloudapp.azure.com"
    http:
      paths:
      - path: /dev_nhl_app
        pathType: ImplementationSpecific
        backend:
          service:
            name: nhl-app-fe-svc
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nhl-app-fe-svc
  namespace: dev
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
      app: frontend
  type: ClusterIP
